[gd_scene load_steps=8 format=3 uid="uid://cylgt5o6eh7fl"]

[ext_resource type="Script" path="res://score.gd" id="1_av8x6"]
[ext_resource type="FontFile" uid="uid://b3acphmyrej56" path="res://font/Daydream.ttf" id="2_tn4lr"]
[ext_resource type="Texture2D" uid="uid://dxsrg23jcpv4v" path="res://art/cursor.png" id="3_axm5y"]
[ext_resource type="Texture2D" uid="uid://bp428d2l8tgno" path="res://art/empty.png" id="4_ra2rr"]
[ext_resource type="AudioStream" uid="uid://b1lpc7jb5vpow" path="res://audio/startScreen.ogg" id="5_wnaav"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eoill"]
bg_color = Color(0.168627, 0.368627, 0.00392157, 1)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_bk75e"]
frames = 2
frame_0/texture = ExtResource("3_axm5y")
frame_0/duration = 0.5
frame_1/texture = ExtResource("4_ra2rr")
frame_1/duration = 0.5

[node name="Score" type="CanvasLayer" groups=["ScoreGroup"]]
process_mode = 3
script = ExtResource("1_av8x6")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -300.0
offset_right = -760.0
offset_bottom = -260.0
grow_horizontal = 0
grow_vertical = 2

[node name="Control" type="Control" parent="HUD"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HUD/Control"]
layout_mode = 0
offset_left = 600.0
offset_right = 800.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_eoill")

[node name="TimeText" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 601.0
offset_top = 342.0
offset_right = 799.0
offset_bottom = 384.0
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 15
text = "0"
horizontal_alignment = 1

[node name="ScoreText2" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 602.0
offset_top = 243.0
offset_right = 801.0
offset_bottom = 270.0
theme_override_colors/font_color = Color(0.886262, 0.886262, 0.886261, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 15
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreText" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 15.314
anchor_top = 5.768
anchor_right = 15.314
anchor_bottom = 5.768
offset_left = -11.56
offset_top = -22.72
offset_right = 188.44
offset_bottom = 19.28
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 15
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighText" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 602.0
offset_top = 494.0
offset_right = 801.0
offset_bottom = 521.0
theme_override_colors/font_color = Color(0.886262, 0.886262, 0.886261, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 15
text = "HIGH"
horizontal_alignment = 1

[node name="HighText2" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 15.314
anchor_top = 5.768
anchor_right = 15.314
anchor_bottom = 5.768
offset_left = -10.56
offset_top = 232.28
offset_right = 187.44
offset_bottom = 274.28
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 15
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeText2" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 602.0
offset_top = 368.0
offset_right = 801.0
offset_bottom = 395.0
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 15
text = "TIME"
horizontal_alignment = 1

[node name="TitleText" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 621.0
offset_top = 55.0
offset_right = 785.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 30
text = "Snake
Snack"
horizontal_alignment = 1

[node name="GameOverMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 223.0
offset_right = 64.0
offset_bottom = 263.0

[node name="Cursor" type="TextureRect" parent="GameOverMenu"]
layout_mode = 0
offset_left = 35.0
offset_top = 187.0
offset_right = 67.0
offset_bottom = 219.0
texture = SubResource("AnimatedTexture_bk75e")

[node name="Cursor2" type="TextureRect" parent="GameOverMenu"]
layout_mode = 0
offset_left = 506.0
offset_top = 186.0
offset_right = 538.0
offset_bottom = 218.0
texture = SubResource("AnimatedTexture_bk75e")
flip_h = true

[node name="Button" type="Control" parent="GameOverMenu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Continue" type="Button" parent="GameOverMenu/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 62.0
offset_top = 145.0
offset_right = 462.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 20
text = " Insert Coin To Start "

[node name="Panel" type="Panel" parent="GameOverMenu"]
layout_mode = 0
offset_left = 83.0
offset_top = -93.0
offset_right = 483.0
offset_bottom = 117.0

[node name="TitleSnake" type="Label" parent="GameOverMenu/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -482.0
offset_top = -213.0
offset_right = 57.0
offset_bottom = -83.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 65
text = "SNAKE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleSnack" type="Label" parent="GameOverMenu/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -458.0
offset_top = -126.0
offset_right = 81.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_fonts/font = ExtResource("2_tn4lr")
theme_override_font_sizes/font_size = 65
text = "SNACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu_sounds" type="AudioStreamPlayer" parent="."]

[node name="Start_Screen_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wnaav")
volume_db = -20.0
autoplay = true

[connection signal="mouse_entered" from="GameOverMenu/Button/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="pressed" from="GameOverMenu/Button/Continue" to="." method="_on_continue_pressed"]
